--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,90 @@
     tools:context=".activity.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:id="@+id/activityTextView"
+        android:layout_width="92sp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="16sp"
+        android:layout_marginTop="89sp"
+        android:width="91sp"
+        android:fontFamily="@font/comfortaa"
+        android:gravity="top"
+        android:letterSpacing="-0.015"
+        android:lineHeight="40sp"
+        android:padding="0px"
+        android:text="@string/login__text_view"
+        android:textColor="@color/activityTextViewColor"
+        android:textFontWeight="400"
+        android:textSize="36sp"
+        android:textStyle="normal" />
+
+    <EditText
+        android:id="@+id/emailField"
+        android:layout_width="343sp"
+        android:layout_height="52sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="176sp"
+        android:layout_marginEnd="16sp"
+        android:background="@drawable/field"
+        android:fontFamily="@font/roboto"
+        android:inputType="textEmailAddress"
+        android:lineHeight="17.5sp"
+        android:paddingStart="17px"
+        android:paddingTop="17px"
+        android:paddingBottom="17px"
+        android:textFontWeight="400"
+        android:textSize="15sp"
+        android:textStyle="normal"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <EditText
+        android:id="@+id/passwordField"
+        android:layout_width="343sp"
+        android:layout_height="52sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="244dp"
+        android:layout_marginEnd="16sp"
+        android:background="@drawable/field"
+        android:fontFamily="@font/roboto"
+        android:inputType="textPassword"
+        android:lineHeight="17.5sp"
+        android:paddingStart="17px"
+        android:paddingTop="17px"
+        android:paddingBottom="17px"
+        android:textFontWeight="400"
+        android:textSize="15sp"
+        android:textStyle="normal"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/loginButton"
+        android:layout_width="343sp"
+        android:layout_height="52sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="312dp"
+        android:layout_marginEnd="16sp"
+        android:background="@drawable/roundbtn"
+        android:fontFamily="@font/roboto_black"
+        android:letterSpacing="0.04"
+        android:lineHeight="15sp"
+        android:paddingTop="19px"
+        android:paddingBottom="18px"
+        android:text="@string/login__btn_text"
+        android:textAlignment="center"
+        android:textColor="@color/BtnTextColor"
+        android:textFontWeight="900"
+        android:textSize="13sp"
+        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
