--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.MainActivity">
 
     <TextView
-        android:id="@+id/activityTextView"
+        android:id="@+id/mainActivityTextView"
         android:layout_width="92sp"
         android:layout_height="55dp"
         android:layout_marginLeft="16sp"
