--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="BtnBackgroundColor">#FF000000</color>
     <color name="BtnTextColor">#FFFFFFFF</color>
     <color name="activityTextViewColor">#FF000000</color>
+    <color name="bellSVGColor">#FF000000</color>
+    <color name="arrowSVGColor">#FF000000</color>
 </resources>
