Создал адаптер и лаунчер для listView
адаптер для апдейта listView и лаунчер для получения данных с активити создания заявки

--- a/app/src/main/res/layout/activity_user_application.xml
+++ b/app/src/main/res/layout/activity_user_application.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.UserApplicationActivity">
+    tools:context=".activity.UserApplicationActivity"
+    android:id="@+id/user_application_layout">
 
     <TextView
         android:id="@+id/userApplicationActivityTextView"
